--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,26 +2,25 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# System dependencies (curl for healthcheck)
+# System dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl libgomp1 && \
+    apt-get install -y --no-install-recommends libgomp1 curl && \
     rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
-COPY requirements.txt .
+# Python dependencies
+COPY api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy FastAPI app
-COPY app.py .
+# Copy API code
+COPY api/app.py .
+COPY api/housing_pipeline.py .
 
-# Models folder (mounted by docker-compose)
-RUN mkdir -p /app/models
+# 🔥 COPY MODELS INTO IMAGE
+COPY models /app/models
 
 EXPOSE 8000
 
-# Healthcheck (Docker + Cloud compatible)
 HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
   CMD curl -f http://localhost:8000/health || exit 1
 
-# Start FastAPI
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
